# video-player

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
lib/SDL3/test/win32/: sdlprocdump.c
src/: load_frame.cpp  main.cpp  video_reader.cpp  video_reader.hpp
